// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DoneFilterButton renders filter button 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <DoneFilterButton
    setFilter={[MockFunction]}
  >
    <button
      className="filter-button filter-button-done"
      onClick={[Function]}
    >
      Done
    </button>
  </DoneFilterButton>
</Provider>
`;

exports[`DoneFilterButton renders filter button being selected 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <DoneFilterButton
    setFilter={[MockFunction]}
  >
    <button
      className="filter-button filter-button-done filter-button-selected"
      onClick={[Function]}
    >
      Done
    </button>
  </DoneFilterButton>
</Provider>
`;
